<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="desc">查看当前类名（myapp）</string>
    <string name="accessibility_service_label">查看当前类名</string>
    <string name="title_activity_provider">ProviderActivity</string>
    <string name="transition_wechat_img">transition_wechat_img</string>


    <string name="str_apk_desc">应用</string>
    <string name="str_jpeg_desc">图片</string>
    <string name="str_mp3_desc">音乐</string>
    <string name="str_mp4_desc">视频</string>

    <string name="tip_web_transfer_first_tip">
        第1步 \n
        请好友连入我的热点 \n
        \"{hotspot}\"
    </string>
    <string name="tip_web_transfer_second_tip">
        第2步 \n
        请好友在浏览器输入以下网址 \n
        http://192.168.43.1:3999 \n
        或者扫描二维码
    </string>
    <string name="str_restart_hotspot">重启热点</string>
    <string name="title_web_transfer">网页传</string>
    <string name="tip_permission_denied">权限被拒绝</string>
    <string name="tip_permission_denied_and_not_get_file_info_list">权限被拒绝，无法获取文件列表</string>
    <string name="tip_permission_denied_and_not_receive_file">权限被拒绝，无法接收文件</string>
    <string name="tip_permission_denied_and_not_send_file">权限被拒绝，无法发送文件文件</string>

    <!--网络渗透-->
    <!-- 主界面 -->
    <string name="system_alter">系统提示</string>
    <string name="check_root_tips">本应用只能在已root的Android手机上运行，下载root工具？</string>
    <string name="download">下载</string>
    <string name="check_360_assistant">本程序运行需要安装%s，是否通过360手机助手安装它？"</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="wifi_connect_tip">网络未连接，是否打开设置WiFi？</string>
    <string name="return_tip">返回</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="root_tool">root工具</string>
    <string name="choose_way">选择方式</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="one_way_host">主机单向</string>
    <string name="one_way_router">路由单向</string>
    <string name="two_way">双向欺骗</string>
    <string name="check_busybox_tip">本程序需要安装busybox才能正确运行，下载busybox？</string>
    <string name="enable_protection">启用防护</string>
    <string name="protection_tips">防御arp、dns欺骗等攻击</string>
    <string name="arp_deception">ARP欺骗方式</string>
    <string name="arp_deception_tips">路由、主机单向欺骗或者双向欺骗</string>
    <string name="http_server_tips">自定义httpserver，提供简单web服务</string>
    <string name="hijact_history_tips">查看保存在本地的会话劫持</string>
    <string name="scan">扫描主机</string>


    <!-- 会话劫持 -->
    <string name="session_hijack">会话劫持</string>
    <string name="hijack_history">劫持历史</string>

    <!-- 数据嗅探 -->
    <string name="sniffer">数据嗅探</string>
    <string name="already_sniffer_data">已捕获  %f MB数据</string>

    <!-- 功能选择 -->
    <string name="function_select">功能选择</string>
    <string name="sniffer_tips">抓取并转发局域网某台设备与其他主机的通信数据</string>
    <string name="session_hijack_tips">劫持局域网中某台设备的http会话</string>
    <string name="code_inject_tips">劫持局域网中某台设备的http会话</string>
    <string name="prohibit_internet_tips">使目标主机无法上网，开启该功能后其他功能将停止</string>

    <!-- 代码注入 -->
    <string name="code_inject">代码注入</string>
    <string name="regular_expression_invalid">正则表达式不符合规则</string>
    <string name="saved">已保存</string>
    <string name="save">保存</string>
    <string name="inject_address_tips">需要注入的网页的url的正则表达式</string>
    <string name="inject_code_tips">需要注入的代码</string>

    <!-- 禁止上网 -->
    <string name="prohibit_internet">禁止上网</string>
    <!-- 网页克隆 -->
    <string name="http_clone_tips">克隆网页，进行社工</string>
    <string name="clone_address">请输入需要克隆的网页地址</string>
    <string name="start_clone">开始克隆</string>
    <!-- Http相关 -->
    <string name="http_server_configuration">HttpServer配置</string>
    <string name="http_server_log_tips">&lt;br/&gt;这里是日志窗口：&lt;br/&gt;&lt;br/&gt;—http文档目录:存储卡/lanshifu/www&lt;br/&gt;—开启后请在浏览器中输入&lt;br/&gt;—%s 访问页面&lt;br/&gt;&lt;br/&gt;</string>
    <string name="http_clone">克隆网站</string>
    <string name="obtain_success">获取成功</string>

    <string name="button_apply_default">发送</string>
    <string name="button_apply">发送(%1$d)</string>

    <string name="string_count">%1$s/%2$s</string>
</resources>
