<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_tip_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_web_transfer_text"
            android:text="@string/tip_web_transfer_first_tip"
            android:padding="@dimen/dp_10"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/spacing_8x"
            android:layout_marginRight="@dimen/spacing_8x"/>
        <TextView
            android:id="@+id/tv_tip_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_web_transfer_text"
            android:text="@string/tip_web_transfer_second_tip"
            android:padding="@dimen/spacing_3x"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/web_transfer_url"/>

    </LinearLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_log"
            android:textColor="@color/red"
            android:alpha="0.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="日志："/>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清空日志"/>
        <Button
            android:id="@+id/btn_showConnectCount"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刷新连接数目"/>

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_restart_hotspot"/>

    </LinearLayout>



</RelativeLayout>
